<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:context=".CovidTestFragment"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/covidTV"
            android:layout_width="415dp"
            android:layout_height="155dp"
            android:background="@drawable/my_gradient_drawable"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingTop="@dimen/_16dp"
            android:text="@string/tested_for_covid19"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/daily_weekly_button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covidTV">


            <RadioButton
                android:id="@+id/positive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/positive"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/negative"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/not_tested"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/waiting_for_result"
                android:textColor="@color/radio_flat_text_selector" />

        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


